# franka-lightweight-interface

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  dev-server.sh  only-run.sh  run-rt.sh
examples/: README.md  joint_position_controller.cpp
include/franka_lightweight_interface/: FrankaGripperInterface.hpp  FrankaLightWeightInterface.hpp  franka_lwi_communication_protocol.h
include/frankalwi_proto/: frankalwi_network.h  frankalwi_proto.h
source/franka_lightweight_interface/: CMakeLists.txt
source/franka_lightweight_interface/analysis/: acceleration_analysis.py  data_accel.txt  ff_analysis.ipynb  model_analysis.ipynb  trajectory_plotting.ipynb
source/franka_lightweight_interface/analysis/panda-model/: panda_arm.urdf
source/franka_lightweight_interface/examples/: README.md  joint_position_controller.cpp  joint_velocity_controller.cpp
source/franka_lightweight_interface/include/franka_lightweight_interface/: FrankaLightWeightInterface.hpp
source/franka_lightweight_interface/src/: FrankaLightWeightInterface.cpp  main.cpp
src/: FrankaGripperInterface.cpp  FrankaLightWeightInterface.cpp  main.cpp  main_gripper.cpp
